...
    this.lottieHeight,
  });

  @override
  Widget build(BuildContext context) {
    return Semantics(
      label: "Error",
      child: Center(
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            LottieWidget(url: lottieUrl,height: 100,),
            const SizedBox(height: 16),
...
